# ChangeLog for dev-qt/qtcore
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtcore/ChangeLog,v 1.71 2015/05/07 11:05:48 pesa Exp $

  07 May 2015; Davide Pesavento <pesa@gentoo.org> -qtcore-4.8.6-r1.ebuild:
  old

*qtcore-4.8.6-r2 (07 May 2015)

  07 May 2015; Ben de Groot <yngwin@gentoo.org>
  +files/qtcore-4.8.6-QNAM-corruptions-fix.patch, +qtcore-4.8.6-r2.ebuild:
  Revbump applying upstream QNAM-corruptions-fix.patch (bug #548622)

  15 Apr 2015; Yixun Lan <dlan@gentoo.org> qtcore-4.8.6-r1.ebuild:
  keyword arm64, tested on cortex-a53 hardware

  29 Mar 2015; Davide Pesavento <pesa@gentoo.org> qtcore-4.8.5-r2.ebuild:
  Add blocker to prevent file collision on downgrade, thanks to Zero_Chaos in
  bug #544666.

  08 Mar 2015; Davide Pesavento <pesa@gentoo.org> qtcore-5.4.1.ebuild:
  Remove all keywords from "live" branch.

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> qtcore-5.4.1.ebuild:
  add arm64 support, tested on A53 board

*qtcore-5.4.1 (24 Feb 2015)

  24 Feb 2015; Davide Pesavento <pesa@gentoo.org> +qtcore-5.4.1.ebuild,
  -qtcore-5.4.0.ebuild:
  Version bump.

  03 Feb 2015; Jeroen Roovers <jer@gentoo.org> qtcore-5.4.0.ebuild:
  Marked ~hppa too.

  02 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> qtcore-5.4.0.ebuild:
  Add ~arm keyword

  01 Feb 2015; Michael Palimaka <kensington@gentoo.org> -qtcore-5.3.2-r1.ebuild:
  Remove old.

  08 Jan 2015; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Update upstream bugtracker URL.

*qtcore-5.4.0 (12 Dec 2014)

  12 Dec 2014; Michael Palimaka <kensington@gentoo.org> +qtcore-5.4.0.ebuild:
  Version bump.

*qtcore-5.3.2-r1 (20 Nov 2014)

  20 Nov 2014; Davide Pesavento <pesa@gentoo.org> +qtcore-5.3.2-r1.ebuild,
  -qtcore-5.3.2.ebuild:
  Revbump to ensure users have qtchooser profiles and global docs installed.

*qtcore-4.8.6-r1 (15 Nov 2014)

  15 Nov 2014; Davide Pesavento <pesa@gentoo.org> +qtcore-4.8.6-r1.ebuild: