@@ -11,26 +11,26 @@ DIST qt-everywhere-opensource-src-4.8.5.tar.gz 241491467 SHA256 eb728f8268831dc4
 DIST qt-everywhere-opensource-src-4.8.6.tar.gz 241623667 SHA256 8b14dd91b52862e09b8e6a963507b74bc2580787d171feda197badfa7034032c SHA512 c2d07c3cf9d687cb9b93e337c89df3f0055bd02bc8aa5ecd55d3ffb238b31a4308aeabc3c51a4f94ac76a1b00796f047513d02e427ed93ae8dd99f836fff7692 WHIRLPOOL 473566814a77237dbdd37a47980c1085f6cf39599c4d6b0120959fe80dadf65c4eaafd5f528dd86cea8815562faa204bedfe3b766c2ca4f2d2c99efc21dbca84
 DIST qtbase-opensource-src-5.4.1.tar.xz 46132220 SHA256 8574a593830959c0f7e5430fe77a43832ea7f5299e14a397a74576b3df7fb1b7 SHA512 75d2c16bc47e6403e15c4094f50757157960cff4434de29f199b015795ba772b62125f01c09aceb2a06f8dfcfc4df8e35330259c76959239f276e2f5bd5221b5 WHIRLPOOL 48d9a583ba9d0bbfffdbfeaa2412e77a0bf4011e7bba525129ba4572faa6a55713a89cb00f4ed7f24e6782e3f7b8b48cb192e2c082b7dcb3c35a85109f2eb340
 EBUILD qtcore-4.8.5-r2.ebuild 5207 SHA256 166ffd4d2357025ce9eef8ca0db78184915219b8f3e2e19b8543ef35a7d20094 SHA512 3434d8243745241b55a10ea92a7c24012c1062584fd441d1805119d673c2a55d38caceb65442e168b4a4f0ca93982bf8b052c79ce0db1fbc75ce28d7e3f2c188 WHIRLPOOL 5ccf583d46b52e221d867eea97284d673fb786510a8f73f2cfa9050884a158958e9563895ed125e49492cb5e3f0593d32b2e088e9b15b8d2aaaeddcd333f2310
-EBUILD qtcore-4.8.6-r2.ebuild 2964 SHA256 02027f933e637bb06c0956fb679e270fcc1f5287476a0832ac53d587630878fc SHA512 65d696769233aefc46d30c1f3b5899ad9b72d0cce35e8da01c889b495a24725f0c9d3654d8bbcb6d6b80a14f2bcdbe7f4fb6208517ece45fee3dd7a23a2845d3 WHIRLPOOL 700e1f88a9dcb1b762407886da37c73fb4bf75c7d7f1c50a255a3bb55c82c7eb0590cdec6cfab6bc0e82b3883247867012902868b678660b72ee0ed62820cd06
+EBUILD qtcore-4.8.6-r2.ebuild 3018 SHA256 6c7a21b73e92d4ffd6b0026b873ce0c09d08e0ac01287402e5be237421101d53 SHA512 34c3e6390bbfdd245936e2286f0afe447cbbe4f8b85b01395c07e2e15ff23fafa1114718a6a32d6c5edeb2fafd0447b65e33e0d2cdc53d7985944459fe351f83 WHIRLPOOL 4eb641af7314250c022e17f02de0ebd402f4d0196f827bb0b7aee1b1330386cc1124e9036d8edc6b31b877244a88a65b06e553bbb6592a0cc40d287abc62770d
 EBUILD qtcore-5.4.1.ebuild 836 SHA256 92c37024a7f84e3459ece24f264e6dd97b8aa34fbb51d2a78c0db94b8b589fe1 SHA512 ae034f3adb1710338abb70583397fdac310185e4d02e0c1c253cc2b7968e674abd7b8f106b626fb26b01221c8a60e33dac249077f5a2b57dbede977f68a7befa WHIRLPOOL c74bae7241441a67763c0b9ea3bfb08be27fb198bf36c463fff4769542006ed12406e825bf677e7e9b9089965c123a4773f1e951ea683d97eb6a78864d26ba53
-MISC ChangeLog 38317 SHA256 95e6eff1236e5e95f715966bb8b0155f515531668b16e17227eb4026081c87e4 SHA512 9be0c7ae6f86ef1a59fa0fa97e7644d68ce76333cab5142a111b23e11078e62c572694a3dff459679dd61bbc8300af715a95f51dd0d996a7e33ed961ceae6d1b WHIRLPOOL bbfe91d466a3780f82d712984489aa522f904a3b274cca8db34f02a9c38d95c80c7ef9160d74d284ea7231065d34b3b1191d002879ed76d881cc3ee9716b1fac
+MISC ChangeLog 38438 SHA256 ffeba91a8251236ec917555f30a98d0acb7a88af884fac683433d51038d3434e SHA512 c79b00705f6e30e61d94ff705a9ee88241638a31662c98716d6aa1759ac58b80066f82862236fc274c31b2f7c7bd5b896b07ecfb4157c886295741dee2d8871e WHIRLPOOL 0572b681d5649dd77dcc46303c93bc7b1adbe3483bc3bb8eb06ccdca536e67c811c8895f35f8c78108eb666e8fbf154c68572490e9a62b26bbd918aaf5666239
 MISC metadata.xml 642 SHA256 7fc084d5cbde663884ed35e9733591c8b33c30bc0baf091960e9bf791a49840e SHA512 394414c48c95a7eab1cdefbd8dab7df4049e18daf1d8f5c1cf9dd13c6d79fbaffa5f30d83358cab8de81ef715bf6826095a7e3b3a40e0ac4556a662a8f292093 WHIRLPOOL bda8ef8538520b6e4bdc25adb88ce73225dffa2139f0c3dce768bc924167986a0fc137173003cb923a5ab3f52a44f67cf668f0c85c0c7858f5a9e1b16f9586ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVS0cNXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVTqrcXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9FwsQAKUNHXWUk8T2+20JlOrTnpQM
-Hq3/FawEgTwnuEEbmXeDv1Xo+r71hocQHmD8iZbymMV2bnCXBN6ojDITe5MMY/lp
-Cfkt081L7nmGRCS3gq8mZkV3rT7tDzE2sxFeYNeeHlLZusimreFJjeERtWk/97PI
-AmSCcZZ51kqWofdCV1BDmMgCFmrTIAi4VEADDjzTHBQTKcABhONrPOE8CPnZKH2p
-Hp+ig4GPCCJUt6IWDKZjUGryb2e/V2ZDawQGedhP/N/mHKZWK8QI0WSVyzM25ZXO
-v4S7rVtiQh4lSMRRBwGWJrKM2e9rs3Wyhb1d3BSy4XaZUyLufJsYx0CYb2DkTuqU
-RUSTBSJf5qpvjKP1qpVkruNb1I/3UXMj2PgbgdHXtr1P45QwcY097BrP1boSC2GT
-aX6pThJwSnyEQrZsydxqUPdZ85BhUUPiyGFI17aEpgHoa4JDcyfJXbifHxciqQ1y
-yuo4NpEiivEytI+B1k49flRbEgQaGKTxMOlILEY1Hd/tntQwyRxJSON22E5Ah3Ra
-VOz07q21092zNc9dw4vmN1qPMZc8hCZIKBsqeZbVQWUH74HXOWP7oqth3wCKAFAd
-FQYht2TLmg95G7mxPHSlZxiZwtFs0X3AmVo5y33bhxx9drjrGgqy65kfdpBFtnXp
-z236IWoao1Ek3UMUF64z
-=iRzP
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV94ooP/2snAOaFmex6RmBdO6FSmF5d
+J3EvwiYMY+nUUybZQCE9qCHe04938EeoPkWks4TPj+mikLPL7mffSU1ib5R6+CJz
+e0ffuomjyjpbvKI0VbfmU+hgdxU5XNPPufBTXuj3kXGq2siWyMeaDwqQRp2JfAJx
+kQlE0BVm0hjkldpaN4IDSZqWgcEx9QWnYx8vPg9W8ISnPDpCWk+t29PE5iGqmp4K
+tsV44r65gKLFnw3d6HLmtClnTghhSkZT0hkznlAcPmsb4Hg4/m/j/LZMqq5X1blN
+j6nzsas/oBYk2wpkiohG8ivckvKU7ZNJEdkLyCc5BfNbGY3wLIMgjBI81OQO9dQd
+TofnEh28FsfdQpQj9zzDhjMr+p7pJ76isgVYFJU7HsGTfpb0xUsFY1hkNeUvqePJ
+W5kPGRapbzWewnEGGLdfUMX5g74h+vTIfC3CuCdeEJCJ0ooQLMTeB7eQBQzvcJbV
+Uo9roqLWfxLRyEwnC9majRztlzwkXPVmE9f2yRO4Uwo8N8gnxRXNTYMPlTo8oZD1
+A6LEWv04v2/E0fVgwIFupkkOaXkbylNtet8WKeXIxJz7PhNfbcix8QM/9Ru00HuB
+Hz4a+WYyZ6FUgqzVjHu1gMN/QLIWVpITQlp2D0MezSd0wpLIYeD1VT+ZvogC08HG
+VqHHI8S2ktyUU5HCch7V
+=AY0z
 -----END PGP SIGNATURE-----
